@@ -248,6 +248,8 @@ val native_dynlink: bool
 val afl_instrument : bool
 (** Whether afl-fuzz instrumentation is generated by default *)
 
+val ar_supports_response_files: bool
+(** Whether ar supports @FILE arguments. *)
 
 (** Access to configuration values *)
 val print_config : out_channel -> unit
