@@ -629,6 +629,12 @@ Working version
 - #12046: Flush stderr when tracing the parser
   (Hugo Heuzard, review by David Allsopp and Nicolás Ojeda Bär)
 
+- #12075: auto-detect whether `ar` support @FILE arguments at
+  configure-time to avoid using this feature with toolchains
+  that do not support it (eg FreeBSD/Darwin).
+  (Nicolás Ojeda Bär, review by Xavier Leroy, David Allsop, Javier
+  Chávarri, Anil Madhavapeddy)
+
 OCaml 5.0.0 (15 December 2022)
 ------------------------------
 
